--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
 /* Write your CSS here! */
+.menu {
+  text-align: center;
+}
+
+.sidebar {
+  width: 280px;
+  height: 735px;
+}
+ 
+.footer {
+  background-color: yellow;
+}
+
+.primary-content {
+ float: left;
+}
+
 
 /* Do not change the CSS below. */
 
@@ -18,7 +35,7 @@
 
 .menu ul li {
   display: inline-block;
-  padding: 15px;
+  padding: 10px;
 }
 
 .menu a {
@@ -40,6 +57,6 @@
 
 .footer {
   background: yellow;
-  padding: 10px;
+  padding: 50px;
   text-align: center;
 }
