--- a/style.css
+++ b/style.css
@@ -1,20 +1,64 @@
-/* Write your CSS here! */
-.menu {
+
+
+.primary-content {
+  display: grid;
+  grid-template-columns: auto;
+  gap: 20px;
+  grid-column: 1 / span 2;;
+}
+
+
+.sidebar {
+  background-color: #2d2d2d;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  width: 300px;
+  height: 600px;
+}
+
+
+.main {
+  background-color: #ececec;
+  text-align: center;
+  padding: 20px;
+}
+
+
+.header {
+  background-color: #4242ea;
+  padding: 20px;
   text-align: center;
 }
 
-.sidebar {
-  width: 280px;
-  height: 735px;
+.logo img {
+  height: 50px;
+  width: auto;
+  margin-right: 10px;
+  text-align: left;
 }
+
+.menu ul {
+  padding: 0;
+}
+
+.menu li {
+  display: inline-block;
+  padding: 10px;
+}
+
+.menu a {
+  color: white;
+  text-decoration: none;
+}
+
  
 .footer {
   background-color: yellow;
+  text-align: center;
+  padding: 50px;
 }
 
-.primary-content {
- float: left;
-}
 
 
 /* Do not change the CSS below. */
